Bug 143813 - Outline folding: copy, cut and paste do not work anymore
Summary: Outline folding: copy, cut and paste do not work anymore
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All All
: medium major
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.3.0 target:7.2.2
Keywords: bibisectNotNeeded, regression
: 143682 143955 144047 (view as bug list)
Depends on:
Blocks: Writer-Outline-Folding
  Show dependency treegraph
 
Reported: 2021-08-10 15:58 UTC by Jean-Baptiste Faure
Modified: 2021-09-23 08:49 UTC (History)
7 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jean-Baptiste Faure 2021-08-10 15:58:57 UTC
Description:
When "Show outline-folding buttons" is checked, it is not possible to copy, cut or paste selected text.

Steps to Reproduce:
1. Activate experimental functions (Options > LibreOffice > Advanced)
2. in Option > LibreOffice Writer > View check "Show outline-folding buttons"
3. Open some text document and select some text
4. try to copy or cut the selection

Actual Results:
nothing happens.

Expected Results:
Copy and Cut do their job, then Paste does the same.


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.2.1.0.0+ / LibreOffice Community
Build ID: 2e2fa3ca1cc652d296a06f08748b33ca50b25d66
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: fr-FR
Ubuntu_20.04_x86-64
Calc: threaded

Version: 7.3.0.0.alpha0+ / LibreOffice Community
Build ID: 26cfb57abfc037752bc02dae043f08ac7b2bc711
CPU threads: 8; OS: Linux 5.11; UI render: default; VCL: gtk3
Locale: fr-FR (fr_FR.UTF-8); UI: en-US
Ubuntu_20.04_x86-64
Calc: threaded
Comment 1 Jean-Baptiste Faure 2021-08-10 16:01:16 UTC
Set Importance to Major because Copy/Cut/Paste non functioning make Writer useless.

Best regards. JBF
Comment 2 Jean-Baptiste Faure 2021-08-10 19:13:16 UTC
set keyword regression because it works as expected when outline folding is disabled.

Best regards. JBF
Comment 3 Timur 2021-08-11 09:09:48 UTC
Hi Jim. 
Now that you are at bug 143577, please see this one.
Comment 4 Dieter 2021-08-17 07:07:39 UTC
*** Bug 143682 has been marked as a duplicate of this bug. ***
Comment 5 Timur 2021-08-21 07:07:15 UTC
*** Bug 143955 has been marked as a duplicate of this bug. ***
Comment 6 steve 2021-08-25 08:32:19 UTC
*** Bug 144047 has been marked as a duplicate of this bug. ***
Comment 7 hwtan 2021-09-07 05:06:56 UTC
It is not possible to use the functions with either the drop down menu (edit-cut, edit-copy, and edit-paste) or the short-cut keys like ctrl-X, ctrl-C, and ctrl-V.
Comment 8 Dieter 2021-09-07 06:40:26 UTC
Jim, I think this is a serious bug. Any ideas how to solve the problem?
Comment 9 Timur 2021-09-07 07:15:39 UTC
There are 2 ways to look at this:
1. this bug invalidates folding feature so it could be critical,
2. it's experimental so it's medium priority, just turn off until fixed.
Comment 10 mike.hall 2021-09-07 10:21:11 UTC
There is another way to look at this. It's a regression and utterly confusing when it happens. I'm an IT professional and it was a real struggle to find out the cause and to fix it. The normal punter will have little chance. So, if unfixed in 7.2.1.2 it seems highly desirable to turn off Writer-Outline-Folding in that release for the benefit of those users.
Comment 11 Dieter 2021-09-07 10:56:25 UTC Comment hidden (obsolete)
Comment 12 Timur 2021-09-07 11:48:07 UTC
(In reply to Dieter from comment #11)
> Timur, I'm not an expert in bibisecting, so I don't understand, why you've
> replaced keywor bibisectrequest with keyword bibisectNotNeeded.
Because it's clear that it comes from folding commits introduced in 7.2. 
So it's clear where it comes from. I didn't think it was important to pinpoint exact one. If it is, dev is welcome to ask, can be done.
Comment 13 Commit Notification 2021-09-20 04:25:19 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f4f646eec90c44b6a7ffeaf5f6ce4c85af64eed0

tdf#143813 Outline folding: Make copy cut paste work

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2021-09-20 14:22:28 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-2":

https://git.libreoffice.org/core/commit/7d6a035db7d3d45cca70eae027cf01c9004043ae

tdf#143813 Outline folding: Make copy cut paste work

It will be available in 7.2.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Jean-Baptiste Faure 2021-09-22 13:35:33 UTC
Thank you very much Jim! Your patches solved the problem for me for both master and 7.2.
Did you plan other changes for this bug? If not, I think you can set this bug as fixed.

Best regards. JBF
Comment 16 Jim Raykowski 2021-09-22 20:39:13 UTC
@Jean-Baptiste Faure, Thanks for reporting. Been a bit busy so wasn't able to look at this as soon as I would have liked. 

Setting to Resolved Fixed as advised.
Comment 17 Jean-Baptiste Faure 2021-09-23 08:49:14 UTC
(In reply to Jim Raykowski from comment #16)
> @Jean-Baptiste Faure, Thanks for reporting. Been a bit busy so wasn't able
> to look at this as soon as I would have liked. 
> 
> Setting to Resolved Fixed as advised.

Thank you! Verified on master and LO 7.2.2.0.0+. So setting as Verified Fixed.

Best regards. JBF