tdf#143813 Outline folding: Make copy cut paste work

Change-Id: Ib8b491fdcce1cd059c8eaf80a9c3bb2590af7c63